# demo.Web.Host/Startup/Routes.go
@@ -3,19 +3,23 @@ package Startup
 import (
 	"GoLangABP/demo.Web.Host/Authentication"
 	. "GoLangABP/demo.Web.Host/controllers"
+
 	"github.com/gin-gonic/gin"
 )
 
-// Index1 路由
-var indexR = &Index{}
-var userLoginR = &UserLogin{}
-var jwt = &Authentication.JWTHelper{}
-var userR = &User{}
+// Server Index1 路由
+type Server struct {
+	UserApi      *UserController      `inject:""`
+	UserLoginApi *UserLoginController `inject:""`
+}
+
+var JwtR = &Authentication.JWTHelper{}
+var Api = &Server{}
 
 func ConfigureRoute(r *gin.Engine) {
 	//controller declare
-	r.POST("/user", userR.AddUserNameHandler)
-	r.POST("/login", userLoginR.LoginHandler)
-	r.Use(jwt.JwtVerify)
-	r.GET("/name", indexR.GetNameHandler)
+	r.POST("/user", Api.UserApi.AddUserNameHandler)
+	r.POST("/login", Api.UserLoginApi.LoginHandler)
+	r.Use(JwtR.JwtVerify)
+
 }
